--- a/ControleDeEstoque/ControleDeEstoque/Views/Produtos/Create.cshtml
+++ b/ControleDeEstoque/ControleDeEstoque/Views/Produtos/Create.cshtml
@@ -24,14 +24,12 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Adicionar" class="btn btn-primary" />
+                <a class="btn btn-light" asp-action="Index">Voltar para a lista</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Voltar para a lista</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
