--- a/ControleDeEstoque/ControleDeEstoque/Views/Produtos/Delete.cshtml
+++ b/ControleDeEstoque/ControleDeEstoque/Views/Produtos/Delete.cshtml
@@ -27,7 +27,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Excluir" class="btn btn-danger" /> |
-        <a asp-action="Index">Voltar para a lista</a>
+        <input type="submit" value="Excluir" class="btn btn-danger" />
+        <a class="btn btn-light" asp-action="Index">Voltar para a lista</a>
     </form>
 </div>
