--- a/ControleDeEstoque/ControleDeEstoque/Views/Produtos/Details.cshtml
+++ b/ControleDeEstoque/ControleDeEstoque/Views/Produtos/Details.cshtml
@@ -27,7 +27,7 @@
 <div>
      @if (User.Identity.IsAuthenticated)
      {
-        <a asp-action="Edit" asp-route-id="@Model?.Id">Editar</a> 
+         <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model?.Id">Editar</a>
      }
-        <a asp-action="Index">Voltar para a lista</a>
+        <a class="btn btn-light" asp-action="Index">Voltar para a lista</a>
 </div>
