--- a/ControleDeEstoque/ControleDeEstoque/Views/Produtos/Edit.cshtml
+++ b/ControleDeEstoque/ControleDeEstoque/Views/Produtos/Edit.cshtml
@@ -25,13 +25,14 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Salvar" class="btn btn-primary" />
+                <a class="btn btn-light" asp-action="Index">Voltar para a lista</a>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Voltar para a lista</a>
+    
 </div>
 
 @section Scripts {
