--- a/ControleDeEstoque/ControleDeEstoque/Views/Produtos/Index.cshtml
+++ b/ControleDeEstoque/ControleDeEstoque/Views/Produtos/Index.cshtml
@@ -8,7 +8,9 @@
 @if (User.Identity.IsAuthenticated)
 {
     <p>
-        <a asp-action="Create">Adicionar novo</a>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+            <a class="btn btn-primary" asp-action="Create" role="button">Adicionar novo</a>
+        </div>
     </p>
 }
 <table class="table" id="tabelaProdutos">
@@ -33,14 +35,17 @@
                 @Html.DisplayFor(modelItem => item.Quantidade)
             </td>
             <td>
-                 @if (User.Identity.IsAuthenticated){
-                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> 
-                }
-                <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> 
-                @if (User.Identity.IsAuthenticated){
-                    
-                <a asp-action="Delete" asp-route-id="@item.Id">Excluir</a>
-                }
+                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+            @if (User.Identity.IsAuthenticated)
+            {
+                    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id" role="button">Editar</a>
+            }
+                    <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id" role="button">Detalhes</a>
+            @if (User.Identity.IsAuthenticated)
+            {
+                    <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id" role="button">Excluir</a>
+            }
+                </div>
             </td>
         </tr>
 }
